# bookworm

./: .gitignore  Cargo.toml  README.md
crates/wrm_dl/: Cargo.toml
crates/wrm_dl/src/: lib.rs
crates/wrm_docs/: Cargo.toml
crates/wrm_docs/src/: lib.rs
crates/wrm_index/: Cargo.toml
crates/wrm_index/src/: lib.rs
crates/wrm_mcp/: Cargo.toml
crates/wrm_mcp/src/: error.rs  lib.rs  main.rs  server.rs  tool.rs
crates/wrm_mcp/src/tool/: crate_readme.rs  crate_resource.rs  crate_versions.rs  search_crate_items.rs  search_crate_src.rs  search_crates.rs
crates/wrm_query/: Cargo.toml
crates/wrm_query/src/: client.rs  crate_metadata.rs  crate_readme.rs  crate_versions.rs  error.rs  get_crate_item_resource.rs  get_crate_source_resource.rs  lib.rs  list_crate_source_resources.rs  search_crate_type_definitions.rs  search_crates.rs
