[package]
edition = "2021"
name = "wrm_query"
version = "0.1.0"

[dependencies]
wrm_dl = { workspace = true }
wrm_docs = { workspace = true }
wrm_index = { workspace = true }

dom_query = { workspace = true }
html2text = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

chrono = { version = "0.4", features = ["serde"] }
crates_io_api = { version = "0.11", default-features = false, features = ["rustls"] }
indoc = { version = "2" }
